--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,81 +1,74 @@
 body {
-  text-align: center;
-  color: white;
-  text-shadow: 1px 1px 2px black;
   background: url(media/sunny6.jpg) no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  color: white;
+  text-align: center;
+  text-shadow: 1px 1px 2px black;
 }
 p {
   font-size: 14px;
   margin-bottom: 6px;
 }
 h1 {
+  font-family: "Merriweather Sans", sans-serif;
   font-size: 40px;
   margin: 0;
-  font-family: "Merriweather Sans", sans-serif;
 }
 h2 {
-  font-size: 60px;
   font-family: "Merriweather Sans", sans-serif;
-}
-.active {
-  font-weight: bold;
+  font-size: 60px;
 }
 .border {
-  padding: 20px;
   border-radius: 4px;
+  padding: 20px;
 }
 .btn-outline-light {
-  color: #0d6efd;
   background: white;
+  color: #0d6efd;
 }
 .btn-outline-light:hover {
-  color: #0b5fd6;
   border: 1px solid #0b5fd6;
+  color: #0b5fd6;
 }
 .card-body {
-  padding: 0;
   border-right: 1px solid rgba(255, 255, 255, 0.4);
+  padding: 0;
 }
 .container {
   max-width: 600px;
 }
-.container.search {
-  padding: 0;
-  margin-top: 60px;
-}
 .container.city-card {
+  background: rgb(30, 132, 216, 0.3);
   margin-top: 10px;
   margin-bottom: 40px;
   padding: 0;
-  background: rgb(30, 132, 216, 0.3);
 }
-.day {
-  font-weight: bold;
+.container.next-days {
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+  margin-top: 40px;
+}
+.container.search {
+  margin-top: 60px;
+  padding: 0;
 }
 .date {
   margin: 10px;
 }
-.active a {
-  color: white !important;
-}
-a {
-  padding: 2px;
-  text-decoration: none;
-  color: white;
-}
-a:focus,
-a:hover {
-  color: white;
+.day {
   font-weight: bold;
-  cursor: pointer;
 }
-.container.next-days {
-  margin-top: 40px;
-  border-top: 1px solid rgba(255, 255, 255, 0.4);
+.footer-link {
+  color: #0d6efd;
+  text-decoration: none;
+  text-shadow: none;
+}
+.footer-link:hover {
+  color: #0d6efd;
+  cursor: pointer;
+  font-weight: bold;
 }
 .next-days {
   padding: 0;
@@ -86,101 +79,111 @@ a:hover {
   padding: 0;
 }
 .other-measurements li {
-  display: inline;
   border-right: 1px solid white;
+  display: inline;
   font-size: 12px;
   padding: 0 10px;
 }
 .other-measurements li:last-of-type {
   border-right: none;
 }
-.weather-description {
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
-}
-.weather-description li {
-  font-size: 24px;
-  display: inline;
-}
-
 .row {
   margin-top: 10px;
 }
 .small {
   font-size: 12px;
 }
-.temperature-block {
-  margin: 20px 10px 0;
-}
 .temperature {
   display: inline;
   margin-left: 36px;
 }
+.temperature-block {
+  margin: 20px 10px 0;
+}
 .units {
-  position: relative;
   bottom: 34px;
+  position: relative;
+}
+.unit-link {
+  color: white;
+  padding: 2px;
+  text-decoration: none;
+}
+.unit-link:focus,
+.unit-link:hover {
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+}
+.weather-description {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+.weather-description li {
+  display: inline;
+  font-size: 24px;
 }
 @media (max-width: 576px) {
   body {
-    text-align: center;
-    color: white;
-    text-shadow: 1px 1px 2px black;
     background: url(media/sunny6.jpg) no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    color: white;
+    text-align: center;
+    text-shadow: 1px 1px 2px black;
   }
   .border {
-    padding: 20px 20px 0 20px;
     border-radius: 0;
+    padding: 20px 20px 0 20px;
   }
   .card-body {
-    padding: 10px 0;
     border-right: none;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     font-size: 14px;
+    padding: 10px 0;
     position: relative;
   }
   .card-body p {
     font-size: 14px;
   }
-  .container.next-days {
-    margin-top: 0;
-    border: none;
-  }
   .container.city-card {
     background: rgb(30, 132, 216, 0.3);
-    color: white;
     border: none;
+    color: white;
+  }
+  .container.next-days {
+    border: none;
+    margin-top: 0;
   }
   .container.search {
-    padding: 0 10px;
     margin: 40px 0 10px 0;
-  }
-  .day {
-    padding-left: 10px;
-    float: left;
+    padding: 0 10px;
   }
   .date {
     margin-bottom: 30px;
   }
-  .other-measurements li {
-    margin: 0;
+  .day {
+    float: left;
+    padding-left: 10px;
   }
   .min-max {
     float: right;
     padding-right: 10px;
   }
-  a {
+  .other-measurements li {
+    margin: 0;
+  }
+  .unit-link {
     color: white;
   }
   .weather-icon {
-    position: absolute;
-    margin-top: 12px;
-    top: 50%;
     left: 50%;
+    margin-top: 12px;
+    position: absolute;
+    top: 50%;
     transform: translate(-50%, -50%);
   }
 }
