--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -56,11 +56,10 @@ h2 {
 }
 .container.temperature-block {
   height: 66px;
-  margin-left: 34px;
   margin-top: 10px;
 }
 .date {
-  margin: 10px;
+  margin: 10px 0;
 }
 .day {
   font-weight: bold;
@@ -84,11 +83,12 @@ h2 {
   width: 70px;
 }
 .next-days {
+  margin-top: 10px;
   padding: 0;
 }
 .other-measurements {
   list-style: none;
-  margin: 0 10px;
+  margin: 0;
   padding: 0;
 }
 .other-measurements li {
